@@ -1,0 +1,11 @@
+{
+	"folders": [
+		{
+			"path": "."
+		},
+		{
+			"path": "C:\\Files\\Caleb\\Development\\Factorio\\Testbench"
+		}
+	],
+	"settings": {}
+}
