@@ -2,18 +2,19 @@
 tapeline-tool=Tapeline Tool
 
 [shortcut]
-tapeline=Tapeline
+tapeline=Tapeline (__CONTROL__get-tapeline-tool__)
 
 [mod-setting-name]
 log-selection-area=Log Selection Dimensions to Chat
-draw-tilegrid-on-ground=Draw Tapeline on Ground
-tilegrid-line-width=Tapeline Line Width
-tilegrid-clear-delay=Tapeline Clear Delay (seconds)
-tilegrid-group-divisor=Tapeline Group Divisor
-tilegrid-split-divisor=Tapeline Split Divisor
-tilegrid-background-color=Tapeline Background Color
-tilegrid-border-color=Tapeline Border Color
-tilegrid-color-1=Tapeline Grid Color
+draw-tilegrid-on-ground=Draw Tilegrid on Ground
+tilegrid-line-width=Tilegrid Line Width
+tilegrid-clear-delay=Tilegrid Clear Delay (seconds)
+tilegrid-group-divisor=Tilegrid Group Divisor
+tilegrid-split-divisor=Tilegrid Split Divisor
+tilegrid-background-color=Tilegrid Background Color
+tilegrid-border-color=Tilegrid Border Color
+tilegrid-label-color=Tilegrid Label Color
+tilegrid-color-1=Tilegrid Grid Color
 tilegrid-color-2=Subgrid 1 Color
 tilegrid-color-3=Subgrid 2 Color
 tilegrid-color-4=Subgrid 3 Color
