@@ -6,7 +6,8 @@ data:extend({
       type = 'shortcut',
       name = 'tapeline-shortcut',
       order = 'a[alt-mode]-b[copy]',
-      action = 'lua',
+      action = 'create-blueprint-item',
+      item_to_create = 'tapeline-tool',
       localised_name = {'shortcut.tapeline'},
       icon =
       {
@@ -38,17 +39,17 @@ data:extend({
       name = 'tapeline-tool',
       icon = constants.itemAssetPath .. 'tapeline-tool.png',
       icon_size = 32,
-      flags = {'hidden'},
+      flags = {'only-in-cursor'},
       subgroup = 'other',
       order = 'c[automated-construction]-a[blueprint]',
       stack_size = 1,
       stackable = false,
-      selection_color = { r = 0, g = 1, b = 0, a = 0.5 },
-      alt_selection_color = { r = 0, g = 1, b = 0 },
+      selection_color = { g = 1 },
+      alt_selection_color = { g = 1, b = 1 },
       selection_mode = {'any-tile'},
       alt_selection_mode = {'any-tile'},
       selection_cursor_box_type = 'copy',
-      alt_selection_cursor_box_type = 'copy',
+      alt_selection_cursor_box_type = 'electricity',
       --entity_filters = {'stone-furnace', 'steel-furnace'},
       --entity_type_filters = {'furnace', 'assembling-machine'},
       --tile_filters = {'concrete', 'stone-path'},
